task 5 complete with stylings

--- a/views/list.hbs
+++ b/views/list.hbs
@@ -3,7 +3,7 @@
 <table class="table">
     {{#each records}}
     <tr>
-        <td><a href="/list/{{this.book_id}}">{{this.title}}</a></td>
+        <td><a href="/{{../letter}}/{{this.book_id}}">{{this.title}}</a></td>
     </tr>
     {{/each}}
 </table>
