--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -12,4 +12,7 @@
         <p>{{getBook.description}}</p>
         <a href="/reviews/{{getBook.title}}">Find Review</a>
     </div>
+     <form action="#" method="get">
+            <button class="btn btn-outline-success" formaction="/">Home</button>
+        </form>
 </div>
