--- a/views/reviews.hbs
+++ b/views/reviews.hbs
@@ -23,7 +23,7 @@
             <td>{{this.summary}}</td>
             <td>
                 <form action="#">
-                    <button class="btn btn-warning" formaction="{{this.url}}">
+                    <button class="btn nextprev-btn" formaction="{{this.url}}">
                         See review
                     </button>
                 </form>
